--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -17,7 +17,6 @@ tokio = "^0.1.19"
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 parking_lot = "0.9"
-flutter-engine-sys = "0.3.5"
 
 [dependencies.smithay]
 path = "../../smithay"
@@ -25,4 +24,9 @@ default-features = false
 features = [ "backend_egl", "wayland_frontend", "native_lib", "backend_winit", "backend_libinput", "backend_drm_legacy", "backend_drm_gbm", "backend_drm_egl", "backend_udev", "backend_session", "backend_session_logind"]
 
 [build-dependencies]
+bindgen = "0.51.1"
+which = "3.1.0"
+dirs = "2.0.2"
+reqwest = "0.9.22"
+zip = "0.5.3"
 gl_generator = "0.13"
